--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "cra-template": "1.2.0",
+    "json-server": "^1.0.0-beta.3",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
